test/compile_failure/trait_same_symbol.rill
trait A {
  def f(self): unit;
}

trait A {
  def f(self): unit;
}
