test/compile_failure/trait_same_symbol.expect
ERROR: The symbol `A` is defined multiple times
  --> File: "", line 5-7, charactors 0-1

rillc: There are warnings or errors.
